# HuLU_Racka

./: .gitignore  results_cb.csv  results_cola.csv  results_copa.csv  results_rte.csv  results_sst.csv  results_wnli.csv
.github/workflows/: publish.yml
evaluate/: .gitignore  README.md  config.json  config_copa.json  config_prompt.json  config_racka.json  merge_model.py  pyproject.toml  requirements.txt  setup.py  start_eval  test_train.py
evaluate/HuluFinetune/: cola_predicted_labels.json
evaluate/cfg/: merge_config.yaml
evaluate/finetune_results/: cola_predicted_labels.json
evaluate/src/cli/: cli.py
evaluate/src/train/: arguments.py  cli.py  constants.py  fsdp.py  helper.py  lora_helper.py  main.py  preprocess.py  train.py
