[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hulu_evaluate"
version = "0.0.2"
description = "Client library to train and evaluate models on the HuLu benchmark."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache" }
authors = [
  { name = "HUN-REN Research Center for Linguistics", email = "varga.kristof@nytud.hun-ren.hu" }
]
keywords = [
  "machine-learning",
  "models",
  "natural-language-processing",
  "deep-learning",
  "evaluation",
  "benchmark"
]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "huggingface-hub==0.27.1",
    "datasets==3.2.0",
    "evaluate==0.4.3",
    "packaging==24.1",
    "pandas==2.2.2",
    "peft==0.14.0",
    "pyarrow==19.0.0",
    "pydantic==2.8.2",
    "requests==2.32.3",
    "scikit-learn==1.5.1",
    "transformers==4.44.0",
    "urllib3==2.2.2"
]

[project.optional-dependencies]
dev = ["ruff>=0.5.0", "black", "isort"]

[project.urls]
Homepage = "https://hulu.nytud.hu/"
Repository = "https://github.com/nytud/HuLU"

[project.scripts]
hulu-evaluate = "cli.cli:cli"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
